Added option for automatically rotating through periods - closes #2

--- a/translations/en.json
+++ b/translations/en.json
@@ -2,5 +2,8 @@
     "CONFIG_MISSING": "Please configure the access_token, athlete_id and activities.",
     "RIDE": "Ride",
     "RUN": "Run",
-    "SWIM": "Swim"
+    "SWIM": "Swim",
+    "RECENT": "Last 4 weeks",
+    "ALL": "Year to date",
+    "YTD": "All time"
 }
