Updated README with animated gif to illustrate auto-rotate option

--- a/translations/en.json
+++ b/translations/en.json
@@ -4,6 +4,6 @@
     "RUN": "Run",
     "SWIM": "Swim",
     "RECENT": "Last 4 weeks",
-    "ALL": "Year to date",
-    "YTD": "All time"
+    "YTD": "Year to date",
+    "ALL": "All time"
 }
