Add activity type support in charts

--- a/translations/en.json
+++ b/translations/en.json
@@ -3,6 +3,36 @@
 	"RIDE": "Ride",
 	"RUN": "Run",
 	"SWIM": "Swim",
+	"HIKE": "Hike",
+	"WALK": "Walk",
+	"ALPINESKI": "Alpine Ski",
+	"BACKCOUNTRYSKI": "Backcountry Ski",
+	"CANOEING": "Canoe",
+	"CROSSFIT": "Crossfit",
+	"EBIKERIDE": "E-Bike Ride",
+	"ELLIPTICAL": "Elliptical",
+	"HANDCYCLE": "Handcycle",
+	"ICESKATE": "Ice Skate",
+	"INLINESKATE": "Inline Skate",
+	"KAYAKING": "Kayaking",
+	"KITESURF": "Kitesurf",
+	"NORDICSKI": "Nordic Ski",
+	"ROCKCLIMBING": "Rock Climb",
+	"ROLLERSKI": "Roller Ski",
+	"ROWING": "Rowing",
+	"SNOWBOARD": "Snowboard",
+	"SNOWSHOE": "Snowshoe",
+	"STAIRSTEPPER": "Stair-Stepper",
+	"STANDUPPADDLING": "Stand Up Paddling",
+	"SURFING": "Surfing",
+	"VELOMOBILE": "Velomobile",
+	"VIRTUALRIDE": "Virtual Ride",
+	"VIRTUALRUN": "Virtual Run",
+	"WEIGHTTRAINING": "Weight Training",
+	"WHEELCHAIR": "Wheelchair",
+	"WINDSURF": "Windsurf",
+	"WORKOUT": "Workout",
+	"YOGA": "Yoga",
 	"RECENT": "Last 4 weeks",
 	"YTD": "Year to date",
 	"ALL": "All time"
