Add additional activity translations

--- a/translations/de.json
+++ b/translations/de.json
@@ -3,6 +3,36 @@
 	"RIDE": "Radfahren",
 	"RUN": "Laufen",
 	"SWIM": "Schwimmen",
+	"HIKE": "Wandern",
+	"WALK": "Spaziergang",
+	"ALPINESKI": "Ski Alpin",
+	"BACKCOUNTRYSKI": "Skitouren",
+	"CANOEING": "Kanu",
+	"CROSSFIT": "Crossfit",
+	"EBIKERIDE": "E-Bike-Radfahrt",
+	"ELLIPTICAL": "Crosstrainer",
+	"HANDCYCLE": "Handbike",
+	"ICESKATE": "Eislaufen",
+	"INLINESKATE": "Inlineskaten",
+	"KAYAKING": "Kajak fahren",
+	"KITESURF": "Kitesurfen",
+	"NORDICSKI": "Skilanglaufen",
+	"ROCKCLIMBING": "Klettern",
+	"ROLLERSKI": "Rollski",
+	"ROWING": "Rudern",
+	"SNOWBOARD": "Snowboarden",
+	"SNOWSHOE": "Schneeschuhwanderung",
+	"STAIRSTEPPER": "Stufen-Stepper",
+	"STANDUPPADDLING": "Stand-up-Paddeln",
+	"SURFING": "Surfen",
+	"VELOMOBILE": "Velomobil fahren",
+	"VIRTUALRIDE": "Virtuelle Radfahrt",
+	"VIRTUALRUN": "Virtueller Lauf",
+	"WEIGHTTRAINING": "Gewichtstraining",
+	"WHEELCHAIR": "Rollstuhl",
+	"WINDSURF": "Windsurfen",
+	"WORKOUT": "Training",
+	"YOGA": "Yoga",
 	"RECENT": "Letzte 4 Wochen",
 	"YTD": "Seit Jahresbeginn",
 	"ALL": "Ewige Statistik"
