--- a/translations/nl.json
+++ b/translations/nl.json
@@ -2,5 +2,38 @@
 	"CONFIG_MISSING": "Configureer de access_token, athlete_id en activities.",
 	"RIDE": "Fietstocht",
 	"RUN": "Rennen",
-	"SWIM": "Zwemmen"
+	"SWIM": "Zwemmen",
+	"HIKE": "Hiken",
+	"WALK": "Wandeling",
+	"ALPINESKI": "Alpineskiën ",
+	"BACKCOUNTRYSKI": "Off-piste skiën",
+	"CANOEING": "Kanoën",
+	"CROSSFIT": "Crossfit",
+	"EBIKERIDE": "E-bike-rit",
+	"ELLIPTICAL": "Crosstrainer",
+	"HANDCYCLE": "Handfietsen",
+	"ICESKATE": "Schaatsen",
+	"INLINESKATE": "Skeeleren",
+	"KAYAKING": "Kayakken",
+	"KITESURF": "Kitesurfen",
+	"NORDICSKI": "Noords skiën",
+	"ROCKCLIMBING": "Rotsklimmen",
+	"ROLLERSKI": "Rolskiën",
+	"ROWING": "Roeien",
+	"SNOWBOARD": "Snowboarden",
+	"SNOWSHOE": "Tourskiën",
+	"STAIRSTEPPER": "Stepapparaat",
+	"STANDUPPADDLING": "Peddelboarden",
+	"SURFING": "Surfen",
+	"VELOMOBILE": "Velomobiel",
+	"VIRTUALRIDE": "Virtuele fietsrit",
+	"VIRTUALRUN": "Virtuele hardloopsessie",
+	"WEIGHTTRAINING": "Krachttraining",
+	"WHEELCHAIR": "Rolstoel",
+	"WINDSURF": "Windsurfen",
+	"WORKOUT": "Training",
+	"YOGA": "Yoga",
+	"RECENT": "Afgelopen 4 weken",
+	"YTD": "Dit jaar",
+	"ALL": "In totaal"
 }
